# Model-References

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  ethics.md  test007.txt  test_push.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
MLPERF/Habana/benchmarks/: README.md  requirements.txt
MLPERF2.0/Habana/benchmarks/: README.md
MLPERF2.0/Habana/systems/: HLS-Gaudi2.json
MLPERF2.1/Habana/benchmarks/: README.md
MLPERF2.1/Habana/systems/: HLS-Gaudi2-PT.json  HLS-Gaudi2-TF.json
MLPERF3.0/Habana/benchmarks/: README.md  requirements.txt
MLPERF3.0/Habana/systems/: HLS-Gaudi2-N32-PT.json  HLS-Gaudi2-N48-PT.json  HLS-Gaudi2-N8-PT.json  HLS-Gaudi2-PT.json  HLS-Gaudi2-TF.json
MLPERF3.1/Inference/code/: README.md  accuracy_from_perf.config  functions.sh  prepare_and_check_submission.py  run_mlperf_scenarios.py  scenarios.yaml
MLPERF3.1/Inference/measurements/: calibration_process.md
MLPERF3.1/Inference/systems/: HLS-Gaudi2-PT.json
MLPERF3.1/Training/benchmarks/: README.md
MLPERF3.1/Training/systems/: HLS-Gaudi2-N16-PT.json  HLS-Gaudi2-N2-PT.json  HLS-Gaudi2-N32-PT.json  HLS-Gaudi2-N4-PT.json  HLS-Gaudi2-N48-PT.json  HLS-Gaudi2-N8-PT.json  HLS-Gaudi2-PT.json  HLS-Gaudi2-TF.json
MLPERF4.0/Inference/: functions.sh  prepare_and_check_submission.py  run_mlperf_scenarios.py  scenarios.yaml
MLPERF4.0/Inference/llama/: README.md  (+9 more)
PyTorch/: README.md
PyTorch/common/: library_loader.py  tensor_logger.py  training_runner.py
PyTorch/computer-vision/: README.md
PyTorch/computer_vision/: README.md
PyTorch/examples/: multi_tenants_resnet50.sh
PyTorch/generative_models/: README.md
PyTorch/nlp/: README.md
PyTorch/recommendation/: README.md
TensorFlow/: README.md  habana_model_runner.py
TensorFlow/common/: check_dirs.py  common.py  common.sh  common_args.py  debug.py  dynpatch_loader.py  generate_hcl_config.py  habana_estimator.py  habana_instance_norm.py  habana_layer_norm.py  habana_model_runner_utils.py  habana_model_yaml_config.py  hcl_config.json  horovod_helpers.py  hpu_grads.py  hw_profiler_helpers.py  library_loader.py  mpi_common.py  multi_node_utils.py  multinode_helpers.py  prepare_output_dir.py  str2bool.py  tb_utils.py  training_run_config.py  utils.py
TensorFlow/computer-vision/: README.md
TensorFlow/computer_vision/: README.md  classifier_trainer.py  preprocessing.py
TensorFlow/examples/: requirements.txt
TensorFlow/examples/custom_op/: CMakeLists.txt  README.md  conftest.py  custom_relu6_op.patch  hpu_custom_div_op.cpp  hpu_custom_relu6_op.cpp  test_custom_div_op.py
TensorFlow/examples/custom_op/tf_ver/2.13.0/: tf_compat.h
TensorFlow/examples/custom_op/tf_ver/common/: tf_compat.h
TensorFlow/modeling/: model_training_utils.py  tf_utils.py
TensorFlow/utils/: hyperparams_flags.py
central/: README.md  check_dirs.py  generate_hcl_config.py  habana_model_runner.py  habana_model_runner_utils.py  habana_model_yaml_config.py  multi_node_utils.py  prepare_output_dir.py  script_paths.py  training_run_config.py
staging/: README.md
test/simple_device/: test_ssd_sw24928.py
(+2757 files in other folders)
